# ai-guard

./: -la  grep -E (h origint$tall)  .bandit  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AI_GUARD_GRADE_IMPROVEMENT_SUMMARY.md  AI_GUARD_IMPROVEMENTS_SUMMARY.md  CODE_OF_CONDUCT.md  CODE_QUALITY_IMPROVEMENTS.md  CONTRIBUTING.md  COVERAGE_ACHIEVEMENT_PLAN.md  COVERAGE_IMPROVEMENT_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENHANCED_FEATURES.md  FINAL_IMPROVEMENTS_SUMMARY.md  GITHUB_ACTIONS_FIXES_SUMMARY.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_SUMMARY.md  IMPROVEMENT_SUMMARY_FINAL.md  ISSUES_AND_IMPROVEMENTS.md  Makefile  PERFORMANCE_GUIDE.md  PRODUCTION_CHECKLIST.md  PRODUCTION_STATUS.md  PROJECT_ASSESSMENT_2024.md  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES_v0.1.0-beta.md  SECURITY.md  TEST_COVERAGE_IMPROVEMENTS.md  ai-guard-full.sarif  ai-guard-test.html  ai-guard-test.json  ai-guard.json  ai-guard.sarif  ai-guard.toml  bandit-report.json  (+31 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ai-guard-enhanced.yml  ai-guard.yml  ci-matrix.yml  ci.yml  release.yml  security.yml
docs/: API.md
src/: __init__.py  ai-guard.sarif
src/ai_guard/: __init__.py  __main__.py  analyzer.py  analyzer_optimized.py  cache.py  config.py  diff_parser.py  exceptions.py  logging_config.py  performance.py  pr_annotations.py  report.py  report_html.py  report_json.py  sarif_report.py  security_scanner.py  tests_runner.py
src/ai_guard/gates/: coverage_eval.py
src/ai_guard/generators/: config_loader.py  enhanced_testgen.py  testgen.py  testgen_config.toml
src/ai_guard/language_support/: js_ts_support.py
src/ai_guard/parsers/: common.py  typescript.py
src/ai_guard/security/: __init__.py  advanced_scanner.py
src/ai_guard/utils/: error_formatter.py  subprocess_runner.py
test-project/: .bandit  .flake8  Makefile  README.md  pyproject.toml  requirements.txt  test-report.json  test_setup.py
test-project/.github/workflows/: test-ai-guard.yml
test-project/src/sample_app/: __init__.py  calculator.py
test-project/tests/: test_calculator.py
tests/: conftest.py  test_analyzer_basic.py  test_analyzer_comprehensive.py  test_analyzer_comprehensive_coverage.py  test_analyzer_comprehensive_new.py  test_analyzer_core.py  test_analyzer_coverage.py  test_analyzer_enhanced_coverage.py  test_analyzer_main.py  test_analyzer_missing_coverage.py  test_analyzer_optimized_comprehensive.py  test_analyzer_optimized_enhanced.py  test_analyzer_performance.py  test_analyzer_quality.py  test_analyzer_security.py  test_cache.py  test_common_parser_comprehensive.py  test_config_basic.py  test_config_basic_new.py  test_config_comprehensive.py  test_config_comprehensive_coverage.py  test_config_comprehensive_new.py  test_config_enhanced_coverage.py  test_config_loader_comprehensive.py  test_config_simple.py  test_core_modules_comprehensive.py  test_coverage_eval_comprehensive.py  test_coverage_eval_enhanced.py  test_coverage_focused.py  test_coverage_gaps.py  test_coverage_improvement.py  test_diff_parser.py  test_diff_parser_basic.py  test_diff_parser_comprehensive.py  test_diff_parser_comprehensive_new.py  test_diff_parser_enhanced.py  test_diff_parser_enhanced_coverage.py  test_diff_parser_simple.py  test_enhanced_testgen_comprehensive.py  test_enhanced_testgen_missing_coverage.py  (+83 more)
tests/fixtures/: coverage_low.xml  coverage_ok.xml  sample.py
tests/unit/: test_analyzer.py  test_analyzer_basic.py  test_analyzer_comprehensive.py  test_analyzer_comprehensive_coverage_final.py  test_analyzer_comprehensive_coverage_new.py  test_analyzer_comprehensive_new.py  test_analyzer_core.py  test_analyzer_coverage_gaps.py  test_analyzer_edge_cases.py  test_analyzer_focused.py  test_analyzer_improved.py  test_analyzer_optimized.py  test_analyzer_simple.py  test_analyzer_simple_coverage.py  test_analyzer_small.py  test_analyzer_working.py  test_analyzer_working_fixed.py  test_comprehensive_coverage.py  test_comprehensive_coverage_final.py  test_comprehensive_coverage_fixed.py  test_config.py  test_config_basic.py  test_config_comprehensive.py  test_config_comprehensive_coverage_final.py  test_config_comprehensive_new.py  test_config_core.py  test_config_edge_cases.py  test_config_focused.py  test_config_improved.py  test_config_loader.py  test_config_loader_basic.py  test_config_simple_coverage.py  test_config_small.py  test_config_working.py  test_config_working_fixed.py  test_core_coverage.py  test_coverage_improvement_final.py  test_diff_parser_comprehensive.py  test_diff_parser_comprehensive_coverage.py  test_diff_parser_comprehensive_new.py  (+75 more)
